k8s/matrix-synapse/delegation/delegation-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delegation-nginx
  namespace: matrix-synapse
spec:
  selector:
    matchLabels:
      app: delegation-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: delegation-nginx
    spec:
      containers:
      - image: nginx:1.23.1
        name: nginx
        volumeMounts:
        - name: conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: conf
        configMap:
          name: delegation-conf
          items:
          - key: delegation-default.conf
            path: default.conf
